# apps/backend/src/modules/account/dto/create-address.dto.ts
@@ -1,0 +1,39 @@
+import { IsBoolean, IsOptional, IsString, MinLength } from 'class-validator';
+
+export class CreateAddressDto {
+  @IsOptional()
+  @IsString()
+  label?: string;
+
+  @IsString()
+  @MinLength(2)
+  fullName!: string;
+
+  @IsString()
+  @MinLength(8)
+  phone!: string;
+
+  @IsOptional()
+  @IsString()
+  province?: string;
+
+  @IsString()
+  @MinLength(2)
+  district!: string;
+
+  @IsOptional()
+  @IsString()
+  ward?: string;
+
+  @IsString()
+  @MinLength(4)
+  addressLine!: string;
+
+  @IsOptional()
+  @IsString()
+  country?: string;
+
+  @IsOptional()
+  @IsBoolean()
+  isDefault?: boolean;
+}
