# apps/backend/src/modules/account/dto/delete-account.dto.ts
@@ -1,0 +1,12 @@
+import { IsOptional, IsString, MinLength } from 'class-validator';
+
+export class DeleteAccountDto {
+  @IsString()
+  @MinLength(8)
+  password!: string;
+
+  @IsOptional()
+  @IsString()
+  @MinLength(3)
+  reason?: string;
+}
