# apps/backend/src/modules/account/dto/update-address.dto.ts
@@ -1,0 +1,43 @@
+import { IsBoolean, IsOptional, IsString, MinLength } from 'class-validator';
+
+export class UpdateAddressDto {
+  @IsOptional()
+  @IsString()
+  label?: string;
+
+  @IsOptional()
+  @IsString()
+  @MinLength(2)
+  fullName?: string;
+
+  @IsOptional()
+  @IsString()
+  @MinLength(8)
+  phone?: string;
+
+  @IsOptional()
+  @IsString()
+  province?: string;
+
+  @IsOptional()
+  @IsString()
+  @MinLength(2)
+  district?: string;
+
+  @IsOptional()
+  @IsString()
+  ward?: string;
+
+  @IsOptional()
+  @IsString()
+  @MinLength(4)
+  addressLine?: string;
+
+  @IsOptional()
+  @IsString()
+  country?: string;
+
+  @IsOptional()
+  @IsBoolean()
+  isDefault?: boolean;
+}
