# apps/backend/src/modules/account/dto/update-profile.dto.ts
@@ -1,0 +1,13 @@
+import { IsOptional, IsString, MinLength } from 'class-validator';
+
+export class UpdateProfileDto {
+  @IsOptional()
+  @IsString()
+  @MinLength(2)
+  fullName?: string;
+
+  @IsOptional()
+  @IsString()
+  @MinLength(8)
+  phone?: string;
+}
